# regime

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backtest/: __init__.py  benchmarks.py  metrics.py  stress_tests.py  walk_forward.py
broker/: __init__.py  broker_adapter.py  order_executor.py  position_tracker.py  trade212_api.py
config/: settings.yaml
core/: __init__.py  allocation.py  config.py  hmm_engine.py  regime_labeling.py  regime_stability.py  regime_strategies.py  risk_manager.py  signal_generator.py
data/: __init__.py  feature_engineering.py  market_data.py
monitoring/: __init__.py  alerts.py  dashboard.py  logger.py  performance.py
state/: dashboard.json  state_snapshot.json
tests/: conftest.py  test_allocation.py  test_backtest_allocation.py  test_broker_adapter.py  test_features.py  test_hmm_engine.py  test_main_loop.py  test_monitoring.py  test_no_lookahead.py  test_regime_stability.py  test_risk_manager.py  test_risk_validate.py  test_scaffold.py  test_stress.py  test_vol_rank_mapping.py
